Woo Cart: content alignment issue fixed

--- a/src/css/view/woo-cart.scss
+++ b/src/css/view/woo-cart.scss
@@ -357,6 +357,8 @@ $thumb-bg-1: #E5F6FC;
                 > .eael-wct-td {
                     flex: 1 1 20%;
                     text-align: center;
+                    display: flex !important;
+                    align-items: center;
 
                     &.product-quantity {
                         flex: 1 1 35%;
